--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url("css/animate.css");
+ @import url("css/bootstrap-datepicker.css");
+ @import url("css/bootstrap.css");
+ @import url("css/flexslider.css");
+ @import url("css/magnific-popup.css");
+ @import url("css/icomoon.css");
+ @import url("css/owl.carousel.min.css");
+ @import url("css/owl.theme.default.min.css");
+ @import url("css/style.css");
