--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,17 @@
   </head>
 
   <body>
+    <div class="colorlib-loader"></div>
+    <div id="page">
+
+    <%= render partial: 'layouts/header' %>
     <%= yield %>
+    <%= render partial: 'layouts/footer' %>
+
+    </div>
+
+    <div class="gototop js-top">
+		    <a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
+	 </div>
   </body>
 </html>
