--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
-
+ @import url("style");
  @import url("css/animate.css");
  @import url("css/bootstrap-datepicker.css");
  @import url("css/bootstrap.css");
