--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -216,7 +216,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="avds_xl_container clearfix">
-						<div class="avds_xl_background" style="background-image:url(<%= asset_path '/images/avds_xl.jpg' %>)"></div>
+						<div class="avds_xl_background" style="background-image: url(<%= asset_path 'avds_xl.jpg' %>)"></div>
 						<div class="avds_xl_content">
 							<div class="avds_title">Amazing Devices</div>
 							<div class="avds_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus.</div>
@@ -227,6 +227,8 @@
 			</div>
 		</div>
 	</div>
+
+<p>avds_xl.jpg</p>
 
 	<!-- Icon Boxes -->
 
