--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
  */
 
  @import "bootstrap";
+ @import "bootstrap-sprockets";
  @import url("css/cart_responsive.css");
  @import url("css/cart.css");
  @import url("css/categories_responsive.css");
