--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
-	<div class="footer_background" style="background-image:url(images/footer.jpg)"></div>
+	<div class="footer_background" style="background-image:url(<%= asset_path 'footer.jpg' %>)"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col">
