--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="header_content d-flex flex-row align-items-center justify-content-start">
-							<div class="logo"><a href="#">Sublime.</a></div>
+							<div class="logo"><%= link_to "Subline.", root_path %></div>
 							<nav class="main_nav">
 								<ul>
 									<li><%= link_to "Accueil", root_path %></li>
