--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -1,2 +1,16 @@
-<h1>Admin#dashboard</h1>
-<p>Find me in app/views/admin/dashboard.html.erb</p>
+
+<% if current_admin %>
+
+
+
+
+
+
+
+
+
+<% end %>
+
+<h2>Merci de vous connectez.</h2>
+
+<% end %>
