--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
 									<li><%= link_to "Produits", product_path %></li>
 									<li><%= link_to "Contact", contact_path %></li>
 									<li><%= link_to "Compte", root_path %></li>
+									<li><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
 								</ul>
 							</nav>
 							<div class="header_extra ml-auto">
