--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,19 @@
 
-<br>
-<br><br>
-<br><br><br><br>
+<div class="signup">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+
+  <div class="field">
+    <%= f.label :first_name %><br />
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :last_name %><br />
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "email" %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -29,5 +37,5 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+</div>
 
-<%= render "devise/shared/links" %>
