--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -14,7 +14,7 @@
       </ul>
     </div>
   <% end %>
-
+  <div class="signup">
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
@@ -37,5 +37,6 @@
 
   <div class="actions">
     <%= form.submit %>
+  </div>
   </div>
 <% end %>
