--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -5,17 +5,7 @@
 <div class="admin_panel">
 
 
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-
-<h1>Bonjour,</h1>
+<h1>Bonjour, <%= current_admin.first_name %> </h1>
 
 
 
