--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,11 @@
+<% if current_admin %>
+<div class="wrap-content">
+
 <h1>New Product</h1>
 
 <%= render 'form', product: @product %>
 
 <%= link_to 'Back', products_path %>
+
+</div>
+<% end %>
