--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,24 +1,108 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+<div class="wrap-content">
 
-<p>
-  <strong>Image:</strong>
-  <%= @product.image %>
-</p>
+<!-- Product Details -->
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
+<div class="product_details">
+  <div class="container">
+    <div class="row details_row">
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+      <!-- Product Image -->
+      <div class="col-lg-6">
+        <div class="details_image">
+          <div class="details_image_large">
+            <%= image_tag @product.image %>
+          </div>
+        </div>
+      </div>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+      <!-- Product Content -->
+      <div class="col-lg-6">
+        <div class="details_content">
+          <div class="details_name"><%= @product.name %></div>
+          <div class="details_price"><%= @product.price %> €</div>
+
+          <!-- In Stock -->
+
+
+          </div>
+          <div class="details_text">
+            <h4>Description:</h4>
+            <p><%= @product.description %></p>
+          </div>
+
+          <br>
+            <div class="button cart_button"><a href="#">Add to cart</a></div>
+          </div>
+
+          <!-- Share -->
+          <div class="details_share">
+            <span>Share:</span>
+            <ul>
+              <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+              <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+              <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+<!-- Products -->
+
+<div class="products">
+  <div class="container">
+    <div class="row">
+      <div class="col text-center">
+        <div class="products_title">Related Products</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+
+        <div class="product_grid">
+
+          <!-- Product -->
+          <div class="product">
+            <div class="product_image"><%= image_tag @product.image %></div>
+            <div class="product_content">
+              <div class="product_title"><a href="product.html"><%= @product.name %></a></div>
+              <div class="product_price"><%= @product.price %></div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Newsletter -->
+
+<div class="newsletter">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="newsletter_border"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-8 offset-lg-2">
+        <div class="newsletter_content text-center">
+          <div class="newsletter_title">Subscribe to our newsletter</div>
+          <div class="newsletter_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros</p></div>
+          <div class="newsletter_form_container">
+            <form action="#" id="newsletter_form" class="newsletter_form">
+              <input type="email" class="newsletter_input" required="required">
+              <button class="newsletter_button trans_200"><span>Subscribe</span></button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
