--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,8 @@
 
-<br>
-<br><br>
-<br><br><br><br>
+<div class="wrap-content">
+
+
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -31,3 +32,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
