--- a/app/views/home/categories.html.erb
+++ b/app/views/home/categories.html.erb
@@ -1,24 +1,12 @@
 
 
-	<!-- Home -->
+<div class="titre-ecommerce">
 
-	<div class="home">
-		<div class="home_container">
-			<div class="home_background" style="background-image:url(images/categories.jpg)"></div>
-			<div class="home_content_container">
-				<div class="container">
-					<div class="row">
-						<div class="col">
-							<div class="home_content">
-								<div class="home_title">Smart Phones<span>.</span></div>
-								<div class="home_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros. Sed viverra velit venenatis fermentum luctus.</p></div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+
+	<h1>Nos produits</h1>
+
+
+</div>
 
 	<!-- Products -->
 
@@ -192,7 +180,7 @@
 				<!-- Icon Box -->
 				<div class="col-lg-4 icon_box_col">
 					<div class="icon_box">
-						<div class="icon_box_image"><img src="images/icon_1.svg" alt=""></div>
+						<div class="icon_box_image"><%= image_tag "icon_1.svg" %></div>
 						<div class="icon_box_title">Free Shipping Worldwide</div>
 						<div class="icon_box_text">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie.</p>
@@ -203,7 +191,7 @@
 				<!-- Icon Box -->
 				<div class="col-lg-4 icon_box_col">
 					<div class="icon_box">
-						<div class="icon_box_image"><img src="images/icon_2.svg" alt=""></div>
+						<div class="icon_box_image"><%= image_tag "icon_2.svg" %></div>
 						<div class="icon_box_title">Free Returns</div>
 						<div class="icon_box_text">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie.</p>
@@ -214,7 +202,7 @@
 				<!-- Icon Box -->
 				<div class="col-lg-4 icon_box_col">
 					<div class="icon_box">
-						<div class="icon_box_image"><img src="images/icon_3.svg" alt=""></div>
+						<div class="icon_box_image"><%= image_tag "icon_3.svg" %></div>
 						<div class="icon_box_title">24h Fast Support</div>
 						<div class="icon_box_text">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie.</p>
