--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,28 +1,11 @@
 
-	<!-- Home -->
+<div class="titre-ecommerce">
 
-	<div class="home">
-		<div class="home_container">
-			<div class="home_background" style="background-image:url(images/contact.jpg)"></div>
-			<div class="home_content_container">
-				<div class="container">
-					<div class="row">
-						<div class="col">
-							<div class="home_content">
-								<div class="breadcrumbs">
-									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li>Contact</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
+	<h1>contact</h1>
+
+
+</div>
 	<!-- Contact -->
 
 	<div class="contact">
