--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,15 +51,16 @@
 					<div class="product_grid">
 
 						<!-- Product -->
+						<% @product.each do|pro| %> 
 						<div class="product">
-							<div class="product_image"><img src="images/product_1.jpg" alt=""></div>
+							<div class="product_image"><%= image_tag pro.image %> </div>
 							<div class="product_extra product_new"><a href="categories.html">New</a></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
-								<div class="product_price">$670</div>
+								<div class="product_title"><a href="product.html"><%= pro.name %></a></div>
+								<div class="product_price"><%= pro.price %></div>
 							</div>
 						</div>
-
+						<%end%>
 					</div>
 
 				</div>
