update controller product

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,7 +27,7 @@
  @import url("css/contact.css");
  @import url("css/main_styles.css");
  @import url("css/product_responsive.css");
- @import url("css/product.css");
+ @import url("styles/product.css");
  @import url("css/responsive.css");
  @import url("styles/signup_user.css");
  @import url("styles/dashboard.css");
