--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
 									<li><%= link_to "Produits", produits_path %></li>
 
 									<li><%= link_to "Contact", contact_path %></li>
-									<% if user_signed_in? %>
+									<% if user_signed_in? && admin_signed_in? %>
 									  <li>
 									  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
 									  </li>
