--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -16,8 +16,8 @@
   <% end %>
   <div class="signup">
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.label :title %>
+    <%= form.text_field :title %>
   </div>
 
   <div class="field">
