--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
-        <td><%= product.name %></td>
+        <td><%= product.title %></td>
         <td><%= product.image %></td>
         <td><%= product.price %></td>
         <td><%= product.description %></td>
