--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,14 +11,19 @@
 									<li><%= link_to "Produits", produits_path %></li>
 
 									<li><%= link_to "Contact", contact_path %></li>
-									<% if user_signed_in? %>
+									<% if user_signed_in?%>
+
 									  <li>
-									  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+									  <%= link_to('Logout', destroy_user_session_path, method: :delete) %> 
 									  </li>
-										<li>Bonjour, <%= current_user.first_name %>
+									<% elsif  admin_signed_in? %>									 
+										<li>
+									  <%= link_to('Logout', destroy_admin_session_path, method: :delete) %> 
+									  </li>
+
 									<% else %>
 									  <li>
-									  <%= link_to('Login', new_user_session_path)  %>
+									  <%= link_to('Login', new_user_session_path)   %>
 									  </li>
 									<% end %>
 
