--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<% if  admin_signed_in? %>
 <h1>Products</h1>
 
 <table>
@@ -31,3 +31,7 @@
 <br>
 
 <%= link_to 'New Product', new_product_path %>
+
+<% else %>
+
+<% end %>
