--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,9 @@
 									<li><%= link_to "Produits", produits_path %></li>
 
 									<li><%= link_to "Contact", contact_path %></li>
+									<% if user_signed_in?%>
 									  <li>
+											
 									  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
 									  	Bonjour <%= current_user.first_name %>
 									  </li>
