--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,7 +34,8 @@
           <br>
           <div class="button cart_button">
             <%= form_for(@order_item) do |f| %>
-              <%= f.hidden_field :product_id, value: product.id %>
+              <%= productid = @product.id %>
+              <%= f.hidden_field :product_id, value: productid %>
               <%= f.submit "Ajouter au panier" %>
             <% end %>
           </div>
