rights for admins

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,5 +1,5 @@
-<% if current_admin %>
-<div class="wrap-content">
+<% if admin_signed_in? %>
+<div class="signup">
 
 <h1>Editing Product</h1>
 
@@ -10,3 +10,4 @@
 
 </div>
 <% end %>
+
