--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,32 +2,33 @@
 <% if  admin_signed_in? %>
 <h1>Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Image</th>
-      <th>Price</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
     <% @products.each do |product| %>
-      <tr>
-        <td><%= product.title %></td>
-        <td><%= product.image %></td>
-        <td><%= product.price %></td>
-        <td><%= product.description %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+            <div class="products">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="product_grid">
+              <!-- Product -->
+              <div class="product">
+               
+                <div class="product_image">
+                  <%= link_to 'Show', product %>
+                  <%= link_to 'Edit', edit_product_path(product) %>
+                  <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+                  <%= image_tag product.image %>
+                </div>
+                <div class="product_content">
+                  <div class="product_title"><a href="product.html"><%= product.title %></a></div>
+                  <div class="product_price"><%= product.price %></div>
+                </div>
+              </div>
 
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <% end %>
 <br>
 
 <%= link_to 'New Product', new_product_path %>
