--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
 									<li><%= link_to "Contact", contact_path %></li>
 									<% if user_signed_in?%>
 									  <li>
-											
+
 									  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
 									  	Bonjour <%= current_user.first_name %>
 									  </li>
@@ -33,7 +33,7 @@
 							</nav>
 							<div class="header_extra ml-auto">
 								<div class="shopping_cart">
-									<a href="cart.html">
+									<a href="cart">
 										<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 												 viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve">
 											<g>
@@ -44,7 +44,7 @@
 													c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5v-41h45.2l26.9,302.3C412.8,445.2,392.1,462,366.8,462z"/>
 											</g>
 										</svg>
-										<div>Cart <span>(0)</span></div>
+										<div>Cart <span>( <%= current_order.order_items.size %> )</span></div>
 									</a>
 								</div>
 								<div class="search">
