--- a/app/views/carts/cart.html.erb
+++ b/app/views/carts/cart.html.erb
@@ -1,3 +1,5 @@
+<div class="wrap-content">
+
 
 
 <div class="titre-ecommerce">
@@ -27,43 +29,43 @@
 			<div class="row cart_items_row">
 				<div class="col">
 
+
+	<% if @order_items.size>0 %>
+		<% @order_items.each do |item| %>
 					<!-- Cart Item -->
 					<div class="cart_item d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-start">
 						<!-- Name -->
 						<div class="cart_item_product d-flex flex-row align-items-center justify-content-start">
 							<div class="cart_item_image">
-								<div><img src="images/cart_1.jpg" alt=""></div>
+								<div><img src="" alt=""></div>
 							</div>
 							<div class="cart_item_name_container">
-								<div class="cart_item_name"><a href="#">Smart Phone Deluxe Edition</a></div>
+								<div class="cart_item_name"><a href="#"><%= item.product.title %></a></div>
 								<div class="cart_item_edit"><a href="#">Edit Product</a></div>
 							</div>
 						</div>
 						<!-- Price -->
-						<div class="cart_item_price">$790.90</div>
+						<div class="cart_item_price"><%= item.product.price %>€</div>
 						<!-- Quantity -->
 						<div class="cart_item_quantity">
-							<div class="product_quantity_container">
-								<div class="product_quantity clearfix">
-									<span>Qty</span>
-									<input id="quantity_input" type="text" pattern="[0-9]*" value="1">
-									<div class="quantity_buttons">
-										<div id="quantity_inc_button" class="quantity_inc quantity_control"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
-										<div id="quantity_dec_button" class="quantity_dec quantity_control"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>
-									</div>
-								</div>
-							</div>
+
 						</div>
 						<!-- Total -->
-						<div class="cart_item_total">$790.90</div>
+						<div class="cart_item_total"><%= item.product.price %></div>
 					</div>
 
 				</div>
 			</div>
+
+		<% end %>
+	<% else %>
+
+<% end %>
+
 			<div class="row row_cart_buttons">
 				<div class="col">
 					<div class="cart_buttons d-flex flex-lg-row flex-column align-items-start justify-content-start">
-						<div class="button continue_shopping_button"><a href="#">Continue shopping</a></div>
+						<div class="button continue_shopping_button"><a href="produits">Continue shopping</a></div>
 						<div class="cart_buttons_right ml-lg-auto">
 							<div class="button clear_cart_button"><a href="#">Clear cart</a></div>
 							<div class="button update_cart_button"><a href="#">Update cart</a></div>
@@ -75,27 +77,7 @@
 				<div class="col-lg-4">
 
 					<!-- Delivery -->
-					<div class="delivery">
-						<div class="section_title">Shipping method</div>
-						<div class="section_subtitle">Select the one you want</div>
-						<div class="delivery_options">
-							<label class="delivery_option clearfix">Next day delivery
-								<input type="radio" name="radio">
-								<span class="checkmark"></span>
-								<span class="delivery_price">$4.99</span>
-							</label>
-							<label class="delivery_option clearfix">Standard delivery
-								<input type="radio" name="radio">
-								<span class="checkmark"></span>
-								<span class="delivery_price">$1.99</span>
-							</label>
-							<label class="delivery_option clearfix">Personal pickup
-								<input type="radio" checked="checked" name="radio">
-								<span class="checkmark"></span>
-								<span class="delivery_price">Free</span>
-							</label>
-						</div>
-					</div>
+
 
 					<!-- Coupon Code -->
 					<div class="coupon">
@@ -120,10 +102,7 @@
 									<div class="cart_total_title">Subtotal</div>
 									<div class="cart_total_value ml-auto">$790.90</div>
 								</li>
-								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div class="cart_total_title">Shipping</div>
-									<div class="cart_total_value ml-auto">Free</div>
-								</li>
+							
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div class="cart_total_title">Total</div>
 									<div class="cart_total_value ml-auto">$790.90</div>
@@ -136,3 +115,4 @@
 			</div>
 		</div>
 	</div>
+</div>
